--- a/cv/index.html
+++ b/cv/index.html
@@ -1,2 +1,2 @@
-<iframe frameborder="0" scrolling="no" style="border:0px" src="https://books.google.com.kh/books?id=e5MkzETNcsgC&lpg=PP1&dq=typography&pg=PA11&output=embed" width="500" height=500>
+<iframe frameborder="0" scrolling="no" style="border:0px" src="/cv.pdf" width="500" height=500>
 </iframe>
