--- a/cv/index.html
+++ b/cv/index.html
@@ -1,13 +1,4 @@
-<html>
-<head><script>
-var pdf = new PDFObject({
-  url: "/cv.pdf",
-  id: "pdfRendered",
-  pdfOpenParams: {
-    view: "FitH"
-  }
-}).embed("pdfRenderer");
-</script>
-</head>
-<div id="pdfRenderer"></div>
-</html>
+<script src="/pdf.js"></script>
+
+<canvas id="the-canvas"></canvas>
+
