--- a/cv/index.html
+++ b/cv/index.html
@@ -1,4 +1,1 @@
-<script src="/pdf.js"></script>
-
-<canvas id="the-canvas"></canvas>
-
+<embed src="http://abhisheksen.me/cv/cv.pdf" width="100%" height="100%"></embed>
