--- a/cv/index.html
+++ b/cv/index.html
@@ -1,1 +1,2 @@
-<embed src="http://abhisheksen.me/cv/cv.pdf" width="100%" height="100%"></embed>
+
+<iframe src="http://abhisheksen.me/cv/cv.pdf" width="100%" height="100%"></iframe>
