--- a/cv/index.html
+++ b/cv/index.html
@@ -12,7 +12,7 @@ var url = './cv.pdf';
 var pdfjsLib = window['pdfjs-dist/build/pdf'];
 
 // The workerSrc property shall be specified.
-pdfjsLib.GlobalWorkerOptions.workerSrc = '//mozilla.github.io/pdf.js/build/pdf.worker.js';
+pdfjsLib.GlobalWorkerOptions.workerSrc = 'https://mozilla.github.io/pdf.js/build/pdf.worker.js';
 
 // Asynchronous download of PDF
 var loadingTask = pdfjsLib.getDocument(url);
