--- a/cv/index.html
+++ b/cv/index.html
@@ -1,7 +1,22 @@
+<html>
+<head>
+<style>
+canvas {
+    padding-left: 0;
+    padding-right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    width: 800px;
+}
+</style>
+
+
 <script src="https://mozilla.github.io/pdf.js/build/pdf.js"></script>
 
+</head>
 
-
+<body>
 <canvas id="the-canvas"></canvas>
 <script>
 // If absolute URL from the remote server is provided, configure the CORS
@@ -48,3 +63,5 @@ loadingTask.promise.then(function(pdf) {
   console.error(reason);
 });
 </script>
+</body>
+</html>
