--- a/cv/index.html
+++ b/cv/index.html
@@ -8,7 +8,6 @@ canvas {
     margin-right: auto;
     display: block;
     width: 800px;
-    border:5px;
 }
 </style>
 
@@ -18,7 +17,7 @@ canvas {
 </head>
 
 <body>
-<canvas id="the-canvas"></canvas>
+<canvas id="the-canvas"   style="border:1px solid"  ></canvas>
 <script>
 // If absolute URL from the remote server is provided, configure the CORS
 // header on that server.
