--- a/cv/index.html
+++ b/cv/index.html
@@ -17,7 +17,7 @@ canvas {
 </head>
 
 <body>
-<canvas id="the-canvas"   style="border:1px solid"  ></canvas>
+<canvas id="the-canvas" ></canvas>
 <script>
 // If absolute URL from the remote server is provided, configure the CORS
 // header on that server.
