adapting to smaller screen

--- a/CV1/index.html
+++ b/CV1/index.html
@@ -2,13 +2,30 @@
 <html lang="en">
 <head>
  <title>Abhishek Sen | Resume</title> 
- 
+ <style>
+   .image{
+      w: 793.92;
+      h: 1122.24;
+      width:var(w)px ; 
+      height: var(h)px;
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+   }
+   @media only screen and (max-width: 793px) {
+      .image{
+         width:100%;
+         height:auto;
+         margin-left: 0px;
+         margin-right: 0px;
+      }
+   }
+
+ </style>
 </head>
 <body>
   
-  <!-- <canvas id='canvas' width=100% height=100%></canvas>
-  <script src="canvas.js"></script>
-   -->
-   <center><img src="CV_AbhishekSen.png" alt="resume" style="width: 793.92px; height: 1122.24px;" ></center>>
+  <img src="CV_AbhishekSen.png" class="image" alt="resume"  >
+
 </body>
 </html>
