--- a/CV1/index.html
+++ b/CV1/index.html
@@ -6,8 +6,10 @@
    .image{
       w: 793.92;
       h: 1122.24;
-      width:var(w)px ; 
-      height: var(h)px;
+      /* width:var(w)px ; 
+      height: var(h)px; */
+      width:100%;
+      height: auto;
       display: block;
       margin-left: auto;
       margin-right: auto;
