--- a/CV1/index.html
+++ b/CV1/index.html
@@ -25,7 +25,7 @@
 
  </style>
 </head>
-<body>
+<body style="background-color:black;">
   
   <img src="CV_AbhishekSen.png" class="image" alt="resume"  >
 
