--- a/CV1/index.html
+++ b/CV1/index.html
@@ -2,32 +2,39 @@
 <html lang="en">
 <head>
  <title>Abhishek Sen | Resume</title> 
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <style>
-   .image{
-      w: 793.92;
-      h: 1122.24;
-      /* width:var(w)px ; 
-      height: var(h)px; */
-      width:100%;
-      height: auto;
-      display: block;
-      margin-left: auto;
-      margin-right: auto;
-   }
+
    @media only screen and (max-width: 793px) {
+      /* for devices with width less than A4 paper */
       .image{
-         width:100%;
+
+         width:100% ;
          height:auto;
-         margin-left: 0px;
-         margin-right: 0px;
+
+         display: block;
+         margin-left: auto;
+         margin-right: auto;
       }
+   }
+   @media only screen and (min-width: 794px) {
+     
+      .image{
+         w: 793.92;
+         h: 1122.24;
+         width:var(w)px ; 
+         height: var(h)px;
+         display: block;
+         margin-left: auto;
+         margin-right: auto;
+      }   
    }
 
  </style>
 </head>
-<body style="background-color:black;">
+<body >
   
-  <img src="CV_AbhishekSen.png" class="image" alt="resume"  >
+  <img src="CV_AbhishekSen.png" class="image" alt="resume" >
 
 </body>
 </html>
