--- a/CV1/index.html
+++ b/CV1/index.html
@@ -13,12 +13,12 @@
          height:auto;
 
          display: block;
-         margin-left: auto;
-         margin-right: auto;
+         margin-left:0px;
+         margin-right: 0px;
       }
    }
    @media only screen and (min-width: 794px) {
-     
+      /* for devices with width more than A4 paper */
       .image{
          w: 793.92;
          h: 1122.24;
