--- a/CV1/index.html
+++ b/CV1/index.html
@@ -34,7 +34,7 @@
 </head>
 <body >
   
-  <img src="CV_AbhishekSen.png" class="image" alt="resume" >
+  <img src="cv.png" class="image" alt="resume" >
 
 </body>
 </html>
