--- a/cv/index.html
+++ b/cv/index.html
@@ -20,10 +20,10 @@
    @media only screen and (min-width: 794px) {
       /* for devices with width more than A4 paper */
       .image{
-         w: 793.92;
-         h: 1122.24;
-         width:var(w)px ; 
-         height: var(h)px;
+         w: 210;
+         h: 297;
+         width:var(w)mm ; 
+         height: var(h)mme;
          display: block;
          margin-left: auto;
          margin-right: auto;
