--- a/index.html
+++ b/index.html
@@ -1,7 +1,23 @@
-<html>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+ <title>canvas resize</title> 
+ <style
+  type="text/css">
+    canvas{
+      border: 1px solid black;
+    }
+    body{
+        
+        overflow: hidden;
+        margin: 0;
+        background: black;
+    }
+ </style>
+</head>
 <body>
 <h1>hello , it's Abhishek Sen</h1>
 here is my <a href=http://abhisheksen.me/resume>resume</a>
 
 </body>
-</html>
