--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
- <title>canvas resize</title> 
+ <title>Abhishek Sen</title> 
  <style
   type="text/css">
     canvas{
