--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
- <title>Abhishek Sen</title> 
+ <title>canvas resize</title> 
  <style
   type="text/css">
     canvas{
@@ -17,8 +16,9 @@
  </style>
 </head>
 <body>
-<h1>hello , it's Abhishek Sen</h1>
-here is my <a href=http://abhisheksen.me/resume>resume</a>
-
+  
+  <canvas id='canvas' width=100% height=100%></canvas>
+  <script src="dotCanvas.js"></script>
+  
 </body>
- </html>
+</html>
