--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
- <title>canvas resize</title> 
+ <title>Abhishek Sen</title> 
  <style
   type="text/css">
     canvas{
