--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
         overflow: hidden;
         margin: 0;
         background: black;
+        
     }
  </style>
 </head>
 <body>
-  <h1>Hello this is Abhishek Sen.</h1>
+  <h1 style="color:white">Hello this is Abhishek Sen.</h1>
   <canvas id='canvas' width=100% height=100%></canvas>
   <script src="dotCanvas.js"></script>
   
