--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
  </style>
 </head>
 <body>
-  <h1 style="color:white;font-family:calibri"><i>Hello this is Abhishek Sen.</i></h1>
+  <h1 style="color:white;font-family:'Brush Script MT', 'Brush Script Std', cursive"><i>Hello this is Abhishek Sen.</i></h1>
   <canvas id='canvas' width=100% height=100%></canvas>
   <script src="dotCanvas.js"></script>
   
