adjusted report display

--- a/projects/AnalysisOfCrimesAgainstWomenInIndia/index.html
+++ b/projects/AnalysisOfCrimesAgainstWomenInIndia/index.html
@@ -4,37 +4,49 @@
 <head>
   <title>Analysis Of Crimes Against Women In India</title>
   <style>
+    body,
+    html {
+      width: 100%;
+      height: 100%;
+      margin: 0;
+      padding: 0
+    }
     .iframe-container {
-      overflow: hidden;
-      padding-top: 80%;
-      position: relative;
+      position: absolute;
+      top: 100px;
+      left: 0;
+      right: 0;
+      bottom: 0;
     }
 
     .iframe-container iframe {
-      border: 0;
-      height: 100%;
-      left: 0;
-      position: absolute;
-      top: 0;
+      display: block;
       width: 100%;
-    }
-
-    /* 4x3 Aspect Ratio */
-    .iframe-container-4x3 {
-      padding-top: 80%;
+      height: 100%;
+      border: none;
     }
   </style>
 </head>
 
 <body>
-  <h1>Analysis Of Crimes Against Women In India</h1>
+  <!-- <h1>Analysis Of Crimes Against Women In India</h1>
   <div class="iframe-container">
     <!iframe src="project_report.pdf#toolbar=0">
-    <!/iframe>
-    <iframe src="https://onedrive.live.com/embed?cid=4CEB51EFBD068D70&resid=4CEB51EFBD068D70%212249&authkey=AEMCK2e9d33mK2I&em=2" frameborder="0" scrolling="no"></iframe>
+      Browser does not support this view. Download to view content.
+      <! /iframe>
+        <iframe
+          src="https://onedrive.live.com/embed?cid=4CEB51EFBD068D70&resid=4CEB51EFBD068D70%212249&authkey=AEMCK2e9d33mK2I&em=2"
+          frameborder="0" scrolling="no"></iframe>
+  </div> -->
+
+  <div class="first-row">
+    <h1>Analysis Of Crimes Against Women In India</h1>
+  </div>
+  <div class="iframe-container">
+    <iframe src="project_report.pdf#toolbar=0"> Browser does not support this view. Download to view content. Content might have already downloaded. </iframe>
   </div>
 
-   
+
 </body>
 
 </html>
