adjusted report display

--- a/projects/AnalysisOfCrimesAgainstWomenInIndia/index.html
+++ b/projects/AnalysisOfCrimesAgainstWomenInIndia/index.html
@@ -29,21 +29,13 @@
 </head>
 
 <body>
-  <!-- <h1>Analysis Of Crimes Against Women In India</h1>
-  <div class="iframe-container">
-    <!iframe src="project_report.pdf#toolbar=0">
-      Browser does not support this view. Download to view content.
-      <! /iframe>
-        <iframe
-          src="https://onedrive.live.com/embed?cid=4CEB51EFBD068D70&resid=4CEB51EFBD068D70%212249&authkey=AEMCK2e9d33mK2I&em=2"
-          frameborder="0" scrolling="no"></iframe>
-  </div> -->
+  
 
   <div class="first-row">
     <h1>Analysis Of Crimes Against Women In India</h1>
   </div>
   <div class="iframe-container">
-    <iframe src="project_report.pdf#toolbar=0"> Browser does not support this view. Download to view content. Content might have already downloaded. </iframe>
+    <iframe src="https://onedrive.live.com/embed?cid=4CEB51EFBD068D70&resid=4CEB51EFBD068D70%212249&authkey=AEMCK2e9d33mK2I&em=2"> Browser does not support this view. Download to view content. Content might have already downloaded. </iframe>
   </div>
 
 
