--- a/projects/intex.html
+++ b/projects/intex.html
@@ -1,16 +1,13 @@
+<!DOCTYPE html>
 <html>
-  <body>
-    <script>
-      (async () => {
-        const response = await fetch('https://api.github.com/repos/abhisheksen999/MyBooks/contents/webpage-for-each-book');
-        const data = await response.json();
-        let htmlString = '<ul>';
-        for (let file of data) {
-          htmlString += `<li><a href="${file.path}">${file.name}</a></li>`;
-        }
-        htmlString += '</ul>';
-        document.getElementsByTagName('body')[0].innerHTML = htmlString;
-      })()
-    </script>
-  <body>
+    <head>
+        <title>My Project Reports</title>
+    <head>
+    <body>
+    <h1>My Project Reports</h1>
+    <li>
+	<a href="/AnalysisOfCrimesAgainstWomenInIndia">Analysis Of Crimes Against Women In India</a><br>
+    </li>
+    
+    </body>
 </html>
