--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <body>
   
   <myname>Abhishek Sen.</myname>
-  <mylink>Check me out <a href=/resume>here</a>.</mylink>
+  <mylink>Check me out <a href=https://abhisheksen.me/resume>here</a>.</mylink>
   <hiddenTags>| Abhishek Sen | DUCS | Computer Science | Department of Computer Science | Delhi University | Kolkata | New Delhi | abhisheksen.me | ISH | International Students House President 2019-2020 | Masters in Computer Science | MSc |</hiddenTags>
   
   <canvas id='canvas' width=100% height=100%></canvas>
